# hermes-cbm-plugin

./: .gitignore  LICENSE  README.md  __init__.py  auto_index.py  cli.py  plugin.yaml  pyproject.toml  schemas.py  server_shim.py  tools.py
skills/cbm-intelligence/: SKILL.md
tests/: conftest.py  test_cbm_plugin.py
